--- a/src/index.html
+++ b/src/index.html
@@ -80,20 +80,29 @@
                         <div class="title">
                             <span class="highlight-brown">DONGER</span>-<span class="highlight-red">DB</span>
                         </div>
-                        <p class="hero-p"> 
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                            aut perspiciatis unde, error autem libero consectetur illum minus.
-                            Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                        <p class="hero-p">
+                            A question about a champion ?
+                            A player ?
+                            Your game ? </br>
+                            ASK THE DONGER !
+                            <!--With Donger-DB you will be able to get way better at the game. Not only is he allowing you to watch closely your
+                            evolution, but he tracks your games and allows you to easily find a build path for the champion you're playing 
+                            depending on who you're playing against, and stats for this matchup. You will be able to find a treeeemendous
+                            amount of information about anything you want, allowing you to completly change the way you play the game on the
+                            go ! </br>
+                            " But mate, I'm already able to do that ! ", you will tell me... </br >
+                            But can you do it at anytime just by chatting with a friend ? I don't think so. And what a friend to have ! The
+                            amazing Heimerdonger himself ! THE MAN !!-->
                         </p>
                         <div>
-                            <button class="btn btn-md btn-primary"> Let's chat with the donger !! </button>
+                            <button class="btn btn-md btn-primary"> Give it a go !! </button>
                         </div>
                     </div>
 
                     <div class="col-md-4 hero-title">
-                        <div class="hero-title-l1">
+                        <!--<div class="hero-title-l1">
                             Get <span class="hero-title-highlight">better</span> ask the <span class="hero-title-highlight">Donger</span>
-                        </div>
+                        </div>-->
                     </div>
 
                     <div class="col-md-4">
