Texts are still to be changed, but the final draft is there

--- a/src/index.html
+++ b/src/index.html
@@ -76,41 +76,29 @@
 
                 <div class="row">
 
-                    <div class="col-md-4 info">
-                        <div class="title">
-                            <span class="highlight-brown">DONGER</span>-<span class="highlight-red">DB</span>
+                    <div class="col-md-4 main">
+                        <div class="row">
+                            <img src="assets/images/title.png" alt="The donger" height="100%" width="100%"></img>
                         </div>
-                        <p class="hero-p">
-                            A question about a champion ?
-                            A player ?
-                            Your game ? </br>
-                            ASK THE DONGER !
-                            <!--With Donger-DB you will be able to get way better at the game. Not only is he allowing you to watch closely your
-                            evolution, but he tracks your games and allows you to easily find a build path for the champion you're playing 
-                            depending on who you're playing against, and stats for this matchup. You will be able to find a treeeemendous
-                            amount of information about anything you want, allowing you to completly change the way you play the game on the
-                            go ! </br>
-                            " But mate, I'm already able to do that ! ", you will tell me... </br >
-                            But can you do it at anytime just by chatting with a friend ? I don't think so. And what a friend to have ! The
-                            amazing Heimerdonger himself ! THE MAN !!-->
-                        </p>
-                        <div>
-                            <button class="btn btn-md btn-primary"> Give it a go !! </button>
+
+                        <div class="row">
+                            <div class="input-group mygroup">
+                                <input type="text" class="form-control" name="name_user" id="name_user" placeholder="Give me your name" />
+                                <span class="input-group-btn">
+                                    <button class="btn btn-md btn-primary"> Give it a go !! </button>
+                                </span>
+                            </div>
                         </div>
                     </div>
 
-                    <div class="col-md-4 hero-title">
-                        <!--<div class="hero-title-l1">
-                            Get <span class="hero-title-highlight">better</span> ask the <span class="hero-title-highlight">Donger</span>
-                        </div>-->
+                    <div class="col-md-4 logo">
+                        <img src="assets/images/heimerdonger-full-2.png" alt="The donger" height="100%" width="100%"></img>
                     </div>
 
-                    <div class="col-md-4">
-                        <div>
-                            <iframe width="420" height="315"
-                                src="https://www.youtube.com/embed/dQw4w9WgXcQ">
-                            </iframe>
-                        </div>
+                    <div class="col-md-4 youtube">
+                        <iframe
+                            src="https://www.youtube.com/embed/m9r4gZECBa8">
+                        </iframe>
                     </div>
 
                 </div>
@@ -124,71 +112,99 @@
         <div class="container">
             <div class="row">
                 <div class="feature col-md-4">
-                    <div class="feature-title">
+
+                    <div class="row">
                         <span class="feature-title-icon">
-                            <i class="fa fa-rocket"></i>
-                        </span> Build Path
+                            <i class="fa fa-sitemap"></i>
+                        </span> 
                     </div>
 
-                    <div class="feature-text">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                            aut perspiciatis unde, error autem libero consectetur illum minus.
-                            Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                        </p>
+                    <div class="row">
+                        <div class="feature-title">
+                            Build Path
+                        </div>
 
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                            aut perspiciatis unde, error autem libero consectetur illum minus.
-                            Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                        </p>
+                        <div class="feature-text">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
+                                aut perspiciatis unde, error autem libero consectetur illum minus.
+                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
+                                aut perspiciatis unde, error autem libero consectetur illum minus.
+                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                            </p>
+                        </div>
+
                     </div>
                 </div>
 
                 <div class="feature col-md-4">
-                    <div class="feature-title">
+
+                    <div class="row">
                         <span class="feature-title-icon">
-                            <i class="fa fa-globe"></i>
-                        </span> Evolution
+                            <i class="fa fa-line-chart"></i>
+                        </span> 
                     </div>
 
-                    <div class="feature-text">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                            aut perspiciatis unde, error autem libero consectetur illum minus.
-                            Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                        </p>
+                    <div class="row">
+                        <div class="feature-title">
+                            Evolution
+                        </div>
 
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                            aut perspiciatis unde, error autem libero consectetur illum minus.
-                            Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                        </p>
+                        <div class="feature-text">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
+                                aut perspiciatis unde, error autem libero consectetur illum minus.
+                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
+                                aut perspiciatis unde, error autem libero consectetur illum minus.
+                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                            </p>
+                        </div>
                     </div>
                 </div>
 
                 <div class="feature col-md-4">
-                    <div class="feature-title">
+
+                    <div class="row">
                         <span class="feature-title-icon">
-                            <i class="fa fa-smile-o"></i>
-                        </span> Winrates
+                            <i class="fa fa-trophy"></i>
+                        </span>
                     </div>
 
-                    <div class="feature-text">
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                            aut perspiciatis unde, error autem libero consectetur illum minus.
-                            Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                        </p>
+                    <div class="row">
+                        <div class="feature-title">
+                             Winrates
+                        </div>
 
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                            aut perspiciatis unde, error autem libero consectetur illum minus.
-                            Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                        </p>
+                        <div class="feature-text">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
+                                aut perspiciatis unde, error autem libero consectetur illum minus.
+                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                            </p>
+
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
+                                aut perspiciatis unde, error autem libero consectetur illum minus.
+                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section id="testimony" class="testimony">
+        <div class="container">
+            <img src="assets/images/jonfon.png" alt="The donger" height="100%" width="100%"></img>
         </div>
     </section>
 
@@ -203,7 +219,7 @@
                     </div>
 
                     <div class="footer-col-logo">
-                        <img src="assets/images/logo-reverse.png" alt="Logo">
+                        <img src="assets/images/title.png" alt="Logo" class="logo">
                     </div>
                 </div>
 
@@ -250,7 +266,7 @@
 
             <div class="row">
                 <div class="footer-copyright col-md-12">
-                    &copy; 2016 Postagram.
+                    &copy; 2016 DongerDB.
                 </div>
             </div>
         </div>
