Last commit, added images, changed texts, polished some positionning

--- a/src/index.html
+++ b/src/index.html
@@ -74,9 +74,13 @@
         <div class="container">
             <div class="hero-container">
 
+                <div>
+                    <img src="assets/images/free.png" alt="free" class="free"></img>
+                </div>
+
                 <div class="row">
 
-                    <div class="col-md-4 main">
+                    <div class="col-md-4 main">                        
                         <div class="row">
                             <img src="assets/images/title.png" alt="The donger" height="100%" width="100%"></img>
                         </div>
@@ -115,36 +119,6 @@
 
                     <div class="row">
                         <span class="feature-title-icon">
-                            <i class="fa fa-sitemap"></i>
-                        </span> 
-                    </div>
-
-                    <div class="row">
-                        <div class="feature-title">
-                            Build Path
-                        </div>
-
-                        <div class="feature-text">
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                                aut perspiciatis unde, error autem libero consectetur illum minus.
-                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                            </p>
-
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                                aut perspiciatis unde, error autem libero consectetur illum minus.
-                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                            </p>
-                        </div>
-
-                    </div>
-                </div>
-
-                <div class="feature col-md-4">
-
-                    <div class="row">
-                        <span class="feature-title-icon">
                             <i class="fa fa-line-chart"></i>
                         </span> 
                     </div>
@@ -156,18 +130,39 @@
 
                         <div class="feature-text">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                                aut perspiciatis unde, error autem libero consectetur illum minus.
-                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                            </p>
-
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                                aut perspiciatis unde, error autem libero consectetur illum minus.
-                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                                With your account linked, you are able to ask the Donger right away how you are doing recently, and he is giving
+                                you stats based on your evolution and how other players at your level are doing ! It will help you understand what
+                                you should work on ( dem cs man !).
                             </p>
                         </div>
                     </div>
+                    
+                </div>
+
+                <div class="feature col-md-4">
+
+                    <div class="row">
+                        <span class="feature-title-icon">
+                            <i class="fa fa-sitemap"></i>
+                        </span> 
+                    </div>
+
+                    <div class="row">
+                        <div class="feature-title">
+                            Build Path
+                        </div>
+
+                        <div class="feature-text">
+                            <p>
+                                If you're wondering what you should play when you're playing Gankplank versus Riven top, just ask the donger !
+                                He are be able to get your matchup automatically based on your summoner name and your server once your account
+                                is made and give you information about if you should go Last Whisper or Infinity Edge based on the winrates with
+                                those items and what the pros are doing !
+                            </p>
+                        </div>
+
+                    </div>
+                    
                 </div>
 
                 <div class="feature col-md-4">
@@ -185,15 +180,8 @@
 
                         <div class="feature-text">
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                                aut perspiciatis unde, error autem libero consectetur illum minus.
-                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
-                            </p>
-
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                                aut perspiciatis unde, error autem libero consectetur illum minus.
-                                Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                                If you want information about how a champion or a specific player is doing in the current patch, ask the Donger again !
+                                He is aware of EVERYTHING and can feed you with ANYTHING you could ask ! He's the Donger after all !
                             </p>
                         </div>
                     </div>
@@ -219,6 +207,7 @@
                     </div>
 
                     <div class="footer-col-logo">
+                        <img src="assets/images/lol.png" class="logo"/>
                         <img src="assets/images/title.png" alt="Logo" class="logo">
                     </div>
                 </div>
@@ -234,7 +223,7 @@
                                 <i class="fa fa-envelope"></i>
                             </span>
 
-                            <a href="#" target="_blank">contact@postagram.com</a>
+                            <a href="#" target="_blank">contact@dongerdb.com</a>
                         </li>
 
                         <li>
@@ -257,9 +246,8 @@
                     </div>
 
                     <div class="footer-col-text">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quis illo, dicta sapiente,
-                        aut perspiciatis unde, error autem libero consectetur illum minus.
-                        Consectetur nobis ut nostrum aliquam iure a soluta iusto!
+                        League of Legends is the exclusive property of Riot Games &copy; and the DongerDB team is making use of the
+                        open API of Riot Games &copy; to provide the best experience to users. DongerDB is free and open source (for now).
                     </div>
                 </div>
             </div>
