--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
                 </button>
 
                 <a class="navbar-brand" href="#">
-                    <img class="navbar-brand-image" src="assets/images/heimerdonger.png" />
+                    <img class="navbar-brand-image" src="assets/images/title.png" />
                 </a>
             </div>
 
@@ -74,15 +74,11 @@
         <div class="container">
             <div class="hero-container">
 
-                <div>
-                    <img src="assets/images/free.png" alt="free" class="free"></img>
-                </div>
-
                 <div class="row">
 
                     <div class="col-md-4 main">                        
                         <div class="row">
-                            <img src="assets/images/title.png" alt="The donger" height="100%" width="100%"></img>
+                            <img src="assets/images/title.png" alt="The donger"></img>
                         </div>
 
                         <div class="row">
@@ -96,7 +92,7 @@
                     </div>
 
                     <div class="col-md-4 logo">
-                        <img src="assets/images/heimerdonger-full-2.png" alt="The donger" height="100%" width="100%"></img>
+                        <img src="assets/images/heimerdonger-full-2.png" alt="The donger"></img>
                     </div>
 
                     <div class="col-md-4 youtube">
@@ -106,6 +102,11 @@
                     </div>
 
                 </div>
+
+                <div>
+                    <img src="assets/images/free.png" alt="free" class="free"></img>
+                </div>
+
             </div>
         </div>
     </section>
@@ -192,7 +193,7 @@
 
     <section id="testimony" class="testimony">
         <div class="container">
-            <img src="assets/images/jonfon.png" alt="The donger" height="100%" width="100%"></img>
+            <img src="assets/images/jonfon.png" alt="The donger"></img>
         </div>
     </section>
 
